--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* HEADER / NAV BAR STYLES START */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +25,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,14 +33,15 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+/* HEADER / NAVBAR STYLES END */
 
 a {
     color: #ffffff;
@@ -50,6 +52,7 @@ p {
     font-size: 16px;
 }
 
+/* HERO STYLES START */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,7 +61,9 @@ p {
     background-size: cover;
     background-position: center;
 }
+/* HERO STYLES END */
 
+/* STYLE ALL SECTION TAGS */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -188,6 +193,8 @@ p {
     font-size: 36px;
 }
 
+
+/* FOOTER STYLES START */
 .footer {
     padding: 30px;
     clear: both;
@@ -198,3 +205,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/* END FOOTER STYLES */
